--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 my-http-server = { branch = "0.2.4", git = "https://github.com/MyJetTools/my-http-server.git" }
+is-alive-middleware = { branch = "0.1.0", git = "https://github.com/ReachPay/is-alive-middleware.git" }
 rust-extensions = { branch = "0.1.0", git = "https://github.com/MyJetTools/rust-extensions.git" }
 
 async-trait = "*"
