--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2021"
 my-http-server = { branch = "0.2.6", git = "https://github.com/MyJetTools/my-http-server.git" }
 is-alive-middleware = { branch = "0.1.2", git = "https://github.com/ReachPay/is-alive-middleware.git" }
 rust-extensions = { branch = "0.1.1", git = "https://github.com/MyJetTools/rust-extensions.git" }
-
+my-logger = { branch = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }
 async-trait = "*"
 serde = { version = "*", features = ["derive"] }
