--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-my-http-server = { branch = "0.2.7", git = "https://github.com/MyJetTools/my-http-server.git" }
-is-alive-middleware = { branch = "0.1.3", git = "https://github.com/ReachPay/is-alive-middleware.git" }
-rust-extensions = { branch = "0.1.1", git = "https://github.com/MyJetTools/rust-extensions.git" }
-my-logger = { branch = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }
+my-http-server = { tag = "0.2.7", git = "https://github.com/MyJetTools/my-http-server.git" }
+is-alive-middleware = { tag = "0.1.3", git = "https://github.com/ReachPay/is-alive-middleware.git" }
+rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }
+my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }
 async-trait = "*"
 serde = { version = "*", features = ["derive"] }
